added Advanced styles and definition list

--- a/index.html
+++ b/index.html
@@ -33,12 +33,42 @@
         <ol>
             <li>
                 <a href="https://www.imdb.com/title/tt0111161/" target="_blank">The Shawshank Redemption</a>
+                <dl>
+                    <dt>Genre</dt>
+                    <dd>Drama</dd>
+                    <dt>Director</dt>
+                    <dd>Frank Darabont</dd>
+                    <dt>Release Date</dt>
+                    <dd>September 23, 1994</dd>
+                    <dt>Rating</dt>
+                    <dd>9.3/10</dd>
+                </dl>
             </li>
             <li>
                 <a href="https://www.imdb.com/title/tt0109830/" target="_blank">Forrest Gump</a>
+                <dl>
+                    <dt>Genre</dt>
+                    <dd>Drama, Romance</dd>
+                    <dt>Director</dt>
+                    <dd>Robert Zemeckis</dd>
+                    <dt>Release Date</dt>
+                    <dd>July 6, 1994</dd>
+                    <dt>Rating</dt>
+                    <dd>8.8/10</dd>
+                </dl>
             </li>
             <li>
                 <a href="https://www.imdb.com/title/tt0454921/" target="_blank">The Pursuit of Happyness</a>
+                <dl>
+                    <dt>Genre</dt>
+                    <dd>Biography, Drama</dd>
+                    <dt>Director</dt>
+                    <dd>Gabriele Muccino</dd>
+                    <dt>Release Date</dt>
+                    <dd>December 15, 2006</dd>
+                    <dt>Rating</dt>
+                    <dd>8.0/10</dd>
+                </dl>
             </li>
         </ol>
         <h3>Images that Represent Me</h3>
