--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li>Cloud Computing</li>
         </ul>
         <h3>My 3 Favorite Movies</h3>
-        <ol>
+        <ol class="reverse-list">
             <li>
                 <a href="https://www.imdb.com/title/tt0111161/" target="_blank">The Shawshank Redemption</a>
                 <dl>
